# varint-simd

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: test.yml
benches/: prost_varint.rs  varint_bench.rs
benches/varint_bench/: leb128.rs  main.rs  prost_varint.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs
scripts/: lookup.js  lookup2.js
src/: decode.rs  encode.rs  lib.rs  num.rs
src/decode/: lookup.rs  mod.rs
src/encode/: mod.rs
