[package]
name = "varint-simd"
version = "0.4.0"
authors = ["Andrew Sun <me@andrewsun.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SIMD-accelerated varint encoder and decoder"
repository = "https://github.com/as-com/varint-simd"
readme = "README.md"
keywords = ["varint", "simd", "protobuf", "serialization"]
categories = ["encoding", "parser-implementations"]

exclude = ["/.idea", "/images", "/.github", "/scripts"]

[dependencies]

[features]
default = ["std"]
std = []
native-optimizations = []

# Please do not enable this feature
dangerously-force-enable-pdep-since-i-really-know-what-im-doing = []

[dev-dependencies]
criterion = "0.5"
integer-encoding = "4.0"
rand = "0.8"
bytes = "1" # prost-varint
lazy_static = "1.4.0"

[build-dependencies]
rustc_version = "0.4.0"

[[bench]]
name = "varint_bench"
harness = false

[profile.release]
lto = "thin"
